Clone the RCU interface into a sleepable and a non-sleepable part in the LinuxKPI.

This allows synchronize RCU to be used inside a SRCU read section.
No functional change intended.

Bump the __FreeBSD_version to force recompilation of external kernel modules.

PR:		242272
MFC after:	1 week
Sponsored by:	Mellanox Technologies


git-svn-id: svn+ssh://svn.freebsd.org/base/head@359727 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f