sys/compat/linuxkpi/common/include/linux/rcupdate.h
@@ -35,6 +35,11 @@
 
 #define	LINUX_KFREE_RCU_OFFSET_MAX	4096	/* exclusive */
 
+/* BSD specific defines */
+#define	RCU_TYPE_REGULAR 0
+#define	RCU_TYPE_SLEEPABLE 1
+#define	RCU_TYPE_MAX 2
+
 #define	RCU_INITIALIZER(v)			\
 	((__typeof(*(v)) *)(v))
 
@@ -43,27 +48,27 @@
 } while (0)
 
 #define	call_rcu(ptr, func) do {		\
-	linux_call_rcu(ptr, func);		\
+	linux_call_rcu(RCU_TYPE_REGULAR, ptr, func);	\
 } while (0)
 
 #define	rcu_barrier(void) do {			\
-	linux_rcu_barrier();			\
+	linux_rcu_barrier(RCU_TYPE_REGULAR);	\
 } while (0)
 
 #define	rcu_read_lock(void) do {		\
-	linux_rcu_read_lock();			\
+	linux_rcu_read_lock(RCU_TYPE_REGULAR);	\
 } while (0)
 
 #define	rcu_read_unlock(void) do {		\
-	linux_rcu_read_unlock();		\
+	linux_rcu_read_unlock(RCU_TYPE_REGULAR);\
 } while (0)
 
 #define	synchronize_rcu(void) do {	\
-	linux_synchronize_rcu();	\
+	linux_synchronize_rcu(RCU_TYPE_REGULAR);	\
 } while (0)
 
 #define	synchronize_rcu_expedited(void) do {	\
-	linux_synchronize_rcu();		\
+	linux_synchronize_rcu(RCU_TYPE_REGULAR);	\
 } while (0)
 
 #define	kfree_rcu(ptr, rcu_head) do {				\
@@ -94,11 +99,11 @@
 
 /* prototypes */
 
-extern void linux_call_rcu(struct rcu_head *ptr, rcu_callback_t func);
-extern void linux_rcu_barrier(void);
-extern void linux_rcu_read_lock(void);
-extern void linux_rcu_read_unlock(void);
-extern void linux_synchronize_rcu(void);
+extern void linux_call_rcu(unsigned type, struct rcu_head *ptr, rcu_callback_t func);
+extern void linux_rcu_barrier(unsigned type);
+extern void linux_rcu_read_lock(unsigned type);
+extern void linux_rcu_read_unlock(unsigned type);
+extern void linux_synchronize_rcu(unsigned type);
 
 /* Empty implementation for !DEBUG */
 #define	init_rcu_head(...)
